GNOME Bugzilla – Bug 698040
[PATCH] Fix secret_service_search_finish() return values
Last modified: 2013-07-19 13:38:18 UTC
Created attachment 241549 [details] [review] Fix secret_service_search_finish() return values secret_service_search_finish() should return GList *, not gboolean.
This patch has been committed as 227a5b29042d9f1dc163bcae403a197bdf731233